# dmucs

dmucs/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac  dmucs.h  dmucs_db.cc  dmucs_db.h  dmucs_host.cc  dmucs_host.h  dmucs_host_state.cc  dmucs_hosts_file.cc  dmucs_hosts_file.h  dmucs_msg.cc  dmucs_msg.h  dmucs_pkt.cc  dmucs_pkt.h  dmucs_resolve.cc  gethost.cc  libtool  loadavg.cc  main.cc  monitor.cc  remhost.cc
dmucs.xcodeproj/: project.pbxproj
dmucs/COSMIC/: Makefile  Makefile.am.first_try  Saccept.c  Sgets.c  Smaskwait.c  Smkskt.c  Sopen.c  Sopenv.c  Speek.c  Speeraddr.c  Speername.c  Sprintf.c  Sputs.c  Sread.c  Sreadbytes.c  Srmsrvr.c  Stest.c  Stimeoutwait.c  Svprintf.c  Swait.c  Swrite.c  error.c  fopenv.c  rdcolor.c  sprt.c
dmucs/COSMIC/HDR/: sockets.h
dmucs/autom4te.cache/: output.1  requests  traces.1
dmucs/scripts/: addhost  disable-host  enable-host  ostype  remhost
